--- a/backend/IndicatorsManager.WebApi/appsettings.Development.json
+++ b/backend/IndicatorsManager.WebApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "IndicatorsManagerDb": "Server=EDWARD\\SQLEXPRESS;Database=IndicatorsManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "IndicatorsManagerDbMac": "Server=127.0.0.1,1433;Database=IndicatorsManagerDb;User Id=sa;Password=reallyStrongPwd123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
