--- a/IndicatorsManagerApp/angular.json
+++ b/IndicatorsManagerApp/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "styles.scss",
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "node_modules/material-design-icons/iconfont/material-icons.css"
             ],
