[GREEN] - Downgrade Newtonsoft to 9.0.1 version. Started importer Service logic.

--- a/backend/IndicatorsManager.BusinessLogic/IndicatorsManager.BusinessLogic.csproj
+++ b/backend/IndicatorsManager.BusinessLogic/IndicatorsManager.BusinessLogic.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\IndicatorsManager.Domain\IndicatorsManager.Domain.csproj" />
     <ProjectReference Include="..\IndicatorsManager.BusinessLogic.Interface\IndicatorsManager.BusinessLogic.Interface.csproj" />
     <ProjectReference Include="..\IndicatorsManager.DataAccess.Interface\IndicatorsManager.DataAccess.Interface.csproj" />
+    <ProjectReference Include="..\IndicatorsManager.IndicatorImporter.Interface\IndicatorsManager.IndicatorImporter.Interface.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
