--- a/backend/IndicatorsManager.WebApi/appsettings.Development.json
+++ b/backend/IndicatorsManager.WebApi/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "IndicatorsManagerDb": "Server=EDWARD\\SQLEXPRESS;Database=IndicatorsManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True;",
-    "IndicatorsManagerDbMac": "Server=127.0.0.1,1433;Database=IndicatorsManagerDb;User Id=sa;Password=reallyStrongPwd123;"
+    "LogDb" : "Server=.\\SQLSERVER2014;Database=LogDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
