--- a/backend/IndicatorsManager.BusinessLogic.Interface/IndicatorsManager.BusinessLogic.Interface.csproj
+++ b/backend/IndicatorsManager.BusinessLogic.Interface/IndicatorsManager.BusinessLogic.Interface.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\IndicatorsManager.Domain\IndicatorsManager.Domain.csproj" />
     <ProjectReference Include="..\IndicatorsManager.IndicatorImporter.Interface\IndicatorsManager.IndicatorImporter.Interface.csproj" />
+    <ProjectReference Include="..\IndicatorsManager.Logger.Interface\IndicatorsManager.Logger.Interface.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
