Startup update and connectionstring on appsettings.

--- a/backend/IndicatorsManager.WebApi/appsettings.json
+++ b/backend/IndicatorsManager.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "IndicatorsManagerDb": "Server=EDWARD\\SQLEXPRESS;Database=IndicatorsManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "IndicatorsManagerDb": "Server=.\\SQLEXPRESS;Database=IndicatorsManagerDb;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "LogDb": "Server=.\\SQLEXPRESS;Database=LogDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
